US/English/Root locales in BI/Col for Fallback provider